--- a/iproc-2-go.html
+++ b/iproc-2-go.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
     <meta name="description"
         content="iProc is a PROCUREMENT 4.0 Platform to assist Procurement &amp; SCM department in managing procurement, contract, vendor, inventory and asset management. Combination of iProc and pengadaan.com platform will unleash the power of digital in procurement and help the companies to rise DIGITAL TRANSFORMATION initiatives" />
     <meta name="author" content="iproc.adw.co.id" />
@@ -49,7 +49,7 @@
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-2xl w-full">
             <div class="p-2 mr-5">
                 <a href="index.html" class="">
-                    <img src="lib/img/Iproc.png" alt="iProc">
+                    <img loading="lazy" src="lib/img/Iproc.png" alt="iProc">
                 </a>
             </div>
 
@@ -59,7 +59,7 @@
                     <button data-dropdown-toggle="languageDropdown"
                         class="inline-flex items-center rounded-md border border-gray-300 shadow-sm px-8 py-2 bg-white text-base font-medium text-gray-900 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-300 focus:ring-4 cursor-pointer"
                         type="button">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/30px-Flag_of_the_United_Kingdom.svg.png"
+                        <img loading="lazy" src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/30px-Flag_of_the_United_Kingdom.svg.png"
                             alt="English Flag" class="w-5 h-5 mr-2">
                         <p class="hidden md:flex ">English</p>
                         <svg class="-mr-1 ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
@@ -74,14 +74,14 @@
                         <ul class="py-1 text-base text-gray-900" aria-labelledby="languageDropdown">
                             <li>
                                 <a href="index-in.html" class="flex items-center px-8 py-2 hover:bg-gray-100">
-                                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9f/Flag_of_Indonesia.svg"
+                                    <img loading="lazy" src="https://upload.wikimedia.org/wikipedia/commons/9/9f/Flag_of_Indonesia.svg"
                                         alt="Indonesia Flag" class="w-5 h-5 mr-2">
                                     Indonesia
                                 </a>
                             </li>
                             <li>
                                 <a href="index.html" class="flex items-center px-8 py-2 hover:bg-gray-100">
-                                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/30px-Flag_of_the_United_Kingdom.svg.png"
+                                    <img loading="lazy" src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/30px-Flag_of_the_United_Kingdom.svg.png"
                                         alt="English Flag" class="w-5 h-5 mr-2">
                                     English
                                 </a>
@@ -137,7 +137,7 @@
         <section id="home" class="hero pt-22 md:pt-40 overflow-hidden">
             <div class="max-w-screen-2xl mx-auto px-8 md:px-0 grid grid-cols-1 sm:grid-cols-12! gap-4 items-center">
                 <div class="col-span-6">
-                    <img class="mb-4 mx-auto sm:mx-0 w-1/5" src="lib/img/iproc-2-go/iproc-2-go.svg"
+                    <img loading="lazy" class="mb-4 mx-auto sm:mx-0 w-1/5" src="lib/img/iproc-2-go/iproc-2-go.svg"
                         alt="iProc 2 Go Logo" />
                     <h1
                         class="mb-5 text-2xl text-center sm:text-left! sm:text-6xl! font-extrabold text-gray-900 leading-snug">
@@ -180,7 +180,7 @@
                 <div class="col-span-6 cloud-content flex justify-center">
                     <div class="inline-block relative illustration -bottom-20" data-aos="zoom-in-left"
                         data-aos-duration="800">
-                        <img src="lib/img/iproc-2-go/Image & Reviews.png" alt="2go Illustration"
+                        <img loading="lazy" src="lib/img/iproc-2-go/Image & Reviews.png" alt="2go Illustration"
                             class="w-full relative z-20" />
                     </div>
                 </div>
@@ -197,8 +197,10 @@
                 <div class="grid grid-cols-12 gap-8">
                     <div class="col-span-12 sm:col-span-6! md:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800">
-                        <div class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#48ACE1] w-3/4 md:w-full">
-                            <img src="lib/img/iproc-2-go/problem-1.png" class="mx-auto" alt="Problem 1" />
+                        <div
+                            class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#48ACE1] w-3/4 md:w-full">
+                            <img loading="lazy" src="lib/img/iproc-2-go/problem-1.png" class="mx-auto"
+                                alt="Problem 1" />
                         </div>
                         <div class="flex gap-4 items-start p-5">
                             <span class="bg-red-100 p-2 rounded-md">
@@ -216,8 +218,10 @@
                     </div>
                     <div class="col-span-12 sm:col-span-6! md:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800" data-aos-delay="50">
-                        <div class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#F05252] w-3/4 md:w-full">
-                            <img src="lib/img/iproc-2-go/problem-2.png" class="mx-auto" alt="Problem 2" />
+                        <div
+                            class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#F05252] w-3/4 md:w-full">
+                            <img loading="lazy" src="lib/img/iproc-2-go/problem-2.png" class="mx-auto"
+                                alt="Problem 2" />
                         </div>
                         <div class="flex gap-4 items-start p-5">
                             <span class="bg-red-100 p-2 rounded-md">
@@ -235,8 +239,10 @@
                     </div>
                     <div class="col-span-12 sm:col-span-6! md:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800" data-aos-delay="100">
-                        <div class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#FFBC50] w-3/4 md:w-full">
-                            <img src="lib/img/iproc-2-go/problem-3.png" class="mx-auto" alt="Problem 3" />
+                        <div
+                            class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#FFBC50] w-3/4 md:w-full">
+                            <img loading="lazy" src="lib/img/iproc-2-go/problem-3.png" class="mx-auto"
+                                alt="Problem 3" />
                         </div>
                         <div class="flex gap-4 items-start p-5">
                             <span class="bg-red-100 p-2 rounded-md">
@@ -257,7 +263,8 @@
         </section>
         <section id="solution" class="solve py-20">
             <div class="max-w-screen-2xl mx-auto px-8 sm:px-0">
-                <img src="./lib/img/iproc-2-go/iproc-2-go.svg" class="mx-auto w-30 mb-2" alt="iProc 2GO Logo">
+                <img loading="lazy" src="./lib/img/iproc-2-go/iproc-2-go.svg" class="mx-auto w-30 mb-2"
+                    alt="iProc 2GO Logo">
                 <h2 class="text-2xl sm:text-4xl! text-center font-bold text-gray-900 mb-2">
                     iProc 2 Go Solusinya!
                 </h2>
@@ -267,8 +274,9 @@
                 <div class="grid grid-cols-12 gap-8">
                     <div class="col-span-12 sm:col-span-6 md:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800">
-                        <div class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-green-400 w-3/4 md:w-full">
-                            <img src="lib/img/iproc-2-go/solve-5.png" class="mx-auto" alt="Problem 3" />
+                        <div
+                            class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-green-400 w-3/4 md:w-full">
+                            <img loading="lazy" src="lib/img/iproc-2-go/solve-5.png" class="mx-auto" alt="Problem 3" />
                         </div>
                         <div class="flex items-start gap-4 p-5">
                             <span class="bg-green-100 p-2 rounded-md">
@@ -286,8 +294,9 @@
                     </div>
                     <div class="col-span-12 sm:col-span-6 md:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800" data-aos-delay="50">
-                        <div class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-pink-400 w-3/4 md:w-full">
-                            <img src="lib/img/iproc-2-go/solve-1.png" class="mx-auto" alt="Problem 3" />
+                        <div
+                            class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-pink-400 w-3/4 md:w-full">
+                            <img loading="lazy" src="lib/img/iproc-2-go/solve-1.png" class="mx-auto" alt="Problem 3" />
                         </div>
                         <div class="flex items-start gap-4 p-5">
                             <span class="bg-green-100 p-2 rounded-md">
@@ -308,7 +317,7 @@
                         data-aos="fade-down" data-aos-duration="800" data-aos-delay="100">
                         <div
                             class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-purple-400 w-3/4 md:w-full">
-                            <img src="lib/img/iproc-2-go/solve-2.png" class="mx-auto" alt="Problem 3" />
+                            <img loading="lazy" src="lib/img/iproc-2-go/solve-2.png" class="mx-auto" alt="Problem 3" />
                         </div>
                         <div class="flex items-start gap-4 p-5">
                             <span class="bg-green-100 p-2 rounded-md">
@@ -327,8 +336,9 @@
                     </div>
                     <div class="col-span-12 sm:col-span-6 col-start-1 md:col-start-3! md:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800" data-aos-delay="150">
-                        <div class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-teal-400 w-3/4 md:w-full">
-                            <img src="lib/img/iproc-2-go/solve-3.png" class="mx-auto" alt="Problem 3" />
+                        <div
+                            class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-teal-400 w-3/4 md:w-full">
+                            <img loading="lazy" src="lib/img/iproc-2-go/solve-3.png" class="mx-auto" alt="Problem 3" />
                         </div>
                         <div class="flex items-start gap-4 p-5">
                             <span class="bg-green-100 p-2 rounded-md">
@@ -346,8 +356,9 @@
                     </div>
                     <div class="col-span-12 sm:col-span-6 md:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800" data-aos-delay="200">
-                        <div class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#A2845E] w-3/4 md:w-full">
-                            <img src="lib/img/iproc-2-go/solve-4.png" class="mx-auto" alt="Problem 3" />
+                        <div
+                            class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#A2845E] w-3/4 md:w-full">
+                            <img loading="lazy" src="lib/img/iproc-2-go/solve-4.png" class="mx-auto" alt="Problem 3" />
                         </div>
                         <div class="flex items-start gap-4 p-5">
                             <span class="bg-green-100 p-2 rounded-md">
@@ -391,7 +402,7 @@
                     *hanya fitur-fitur tertentu dari iProc yang dapat
                     dikelola melalui iProc 2 Go
                 </p>
-                <img src="./lib/img/iproc-2-go/phone.png"
+                <img loading="lazy" src="./lib/img/iproc-2-go/phone.png"
                     class="relative -bottom-15 mx-auto right-0 w-1/2 hidden sm:block md:absolute! md:bottom-0 md:right-8! md:w-1/4!"
                     alt="iProc Phone" data-aos="fade-up" data-aos-duration="800">
             </div>
@@ -401,11 +412,12 @@
         <div class="max-w-screen-2xl mx-auto p-2">
             <div class="w-full grid grid-cols-12 gap-5 sm:gap-10!">
                 <div class="col-span-12 sm:col-span-6 lg:col-span-4!">
-                    <img src="./lib/img/iproc-white.svg" class="w-30 mb-5" alt="iProc Logo">
+                    <img loading="lazy" src="./lib/img/iproc-white.svg" class="w-30 mb-5" alt="iProc Logo">
                     <p class="text-sm sm:text-base! mb-5">Kapan saja dan di mana saja, akses beberapa fitur iProc kini
                         semakin mudah dengan iProc 2GO, aplikasi iProc di mobile phone Anda.</p>
                     <h3 class="text-base sm:text-lg font-bold mb-5">Certified & Registered</h3>
-                    <img src="./lib/img/iproc-2-go/certified-registered.png" class="w-full" alt="Certified Registered">
+                    <img loading="lazy" src="./lib/img/iproc-2-go/certified-registered.png" class="w-full"
+                        alt="Certified Registered">
                 </div>
                 <div class="col-span-12 sm:col-span-6 lg:col-span-4!">
                     <h3 class="text-base sm:text-lg font-bold mb-5">REACH US</h3>
@@ -445,7 +457,8 @@
                 <div class="col-span-12 lg:col-span-4!">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.2694070869316!2d106.80391157597964!3d-6.228168393759932!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f1ea05a27367%3A0xe60af13ee852c9e9!2sADW%20Consulting%20-%20Treasury%20Tower%20(D8)!5e0!3m2!1sid!2sid!4v1745235500852!5m2!1sid!2sid"
-                        style="border:0;" allowfullscreen="" class="w-full aspect-[3/2] rounded-xl" loading="lazy"
+                        style="border:0;" allowfullscreen="" title="Pin Point ADW Consulting"
+                        class="w-full aspect-[3/2] rounded-xl" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
@@ -463,6 +476,7 @@
                                 d="M21.7 8.037a4.26 4.26 0 0 0-.789-1.964 2.84 2.84 0 0 0-1.984-.839c-2.767-.2-6.926-.2-6.926-.2s-4.157 0-6.928.2a2.836 2.836 0 0 0-1.983.839 4.225 4.225 0 0 0-.79 1.965 30.146 30.146 0 0 0-.2 3.206v1.5a30.12 30.12 0 0 0 .2 3.206c.094.712.364 1.39.784 1.972.604.536 1.38.837 2.187.848 1.583.151 6.731.2 6.731.2s4.161 0 6.928-.2a2.844 2.844 0 0 0 1.985-.84 4.27 4.27 0 0 0 .787-1.965 30.12 30.12 0 0 0 .2-3.206v-1.516a30.672 30.672 0 0 0-.202-3.206Zm-11.692 6.554v-5.62l5.4 2.819-5.4 2.801Z"
                                 clip-rule="evenodd" />
                         </svg>
+                        <span class="sr-only">Youtube</span>
                     </a>
                     <a href="https://id.linkedin.com/company/anggada-duta-wisesa-pt"
                         class="border-1 border-white p-2 rounded-full whitespace-nowrap w-[34px] h-[34px]">
@@ -473,6 +487,7 @@
                                 clip-rule="evenodd" />
                             <path d="M7.2 8.809H4V19.5h3.2V8.809Z" />
                         </svg>
+                        <span class="sr-only">Linkedin</span>
                     </a>
                     <a href="https://x.com/adw_consulting"
                         class="border-1 border-white p-2 rounded-full whitespace-nowrap w-[34px] h-[34px]">
@@ -481,6 +496,7 @@
                             <path
                                 d="M13.795 10.533 20.68 2h-3.073l-5.255 6.517L7.69 2H1l7.806 10.91L1.47 22h3.074l5.705-7.07L15.31 22H22l-8.205-11.467Zm-2.38 2.95L9.97 11.464 4.36 3.627h2.31l4.528 6.317 1.443 2.02 6.018 8.409h-2.31l-4.934-6.89Z" />
                         </svg>
+                        <span class="sr-only">Twitter/X</span>
                     </a>
                     <a href="https://www.facebook.com/ADWConsulting/"
                         class="border-1 border-white p-2 rounded-full whitespace-nowrap w-[34px] h-[34px]">
@@ -490,6 +506,7 @@
                                 d="M13.135 6H15V3h-1.865a4.147 4.147 0 0 0-4.142 4.142V9H7v3h2v9.938h3V12h2.021l.592-3H12V6.591A.6.6 0 0 1 12.592 6h.543Z"
                                 clip-rule="evenodd" />
                         </svg>
+                        <span class="sr-only">Facebook</span>
                     </a>
                 </div>
             </div>
